// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add item 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Chesterton jr.",
      "price": 10,
    },
  ],
}
`;

exports[`can add item 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Chesterton",
        "price": 10,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Chesterton jr.",
        "price": 10,
      },
    ],
  },
]
`;

exports[`can add item checking by patching 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "Chesterton",
      "price": 10,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Chesterton jr.",
  },
]
`;
